# microrender

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Readme.md
render/: CMakeLists.txt  HittableList.h  Interval.h  MainWindow.cpp  MainWindow.h  Ray.h  RenderThread.cpp  RenderThread.h  Sphere.h  Vec.h  camera.h  hittable.h  interval.cpp  main.cpp  rt.h
